# capture

./: .gitignore  CLI-README.md  README.md  capture  pyproject.toml  restore-helper  verify-snapshot
src/capture/: __main__.py  context.py  loader.py  provider.py
src/capture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/capture/plugins/: brew.py  git.py
