[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capture"
version = "0.1.0"
description = "Modular system snapshot CLI with pluggable providers"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "unstable-studios" }]
license = { file = "LICENSE" }
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.scripts]
capture = "capture.__main__:app"

[project.entry-points."capture.providers"]
brew = "capture.plugins.brew:get_provider"
git = "capture.plugins.git:get_provider"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
